kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafio-devops-deployment
  namespace: desafio-devops-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: desafio-devops-app
  template:
    metadata:
      labels:
        app: desafio-devops-app
    spec:
      containers:
        - name: desafio-devops-container
          image: thullyoo/desafio-devops:latest
          ports:
            - containerPort: 3000
