kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: desafio-devops-service
  namespace: desafio-devops-namespace
spec:
  type: NodePort
  selector:
    app: desafio-devops-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
