kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desafio-devops-ingress
  namespace: desafio-devops-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: meuapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: desafio-devops-service
                port:
                  number: 80
